# SDLpp

./: .gitignore  CMakeLists.txt  build.sh
sources/: Color.cpp  Error.cpp  Init.cpp  Utils.cpp  Video.cpp
sources/SDL++/: Clipboard.hpp  Error.hpp  Events.hpp  Exception.hpp  GameController.hpp  Haptic.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Pixels.hpp  Rect.hpp  Render.hpp  SDL.hpp  SharedObject.hpp  Surface.hpp  Texture.hpp  Timer.hpp  Utils.hpp  Vec2.hpp  Video.hpp
